<resources>
    <string name="app_name">HCI_project1</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="check_icon">&#xf00c;</string>
    <string name="prompt_text_string">Επιλέξτε το επίπεδο πλυσίματος που επιθυμείτε</string>
    <string name="info1_string">Ελαφρύ πλύσιμο: Κατάλληλο για ελαφρά λερωμένα πιάτα/ ποτήρια/ μαχαιροπίρουνα</string>
    <string name="info2_string">Κανονικό πλύσιμο: Κατάλληλο για μέτρια λερωμένα πιάτα/ ποτήρια/ μαχαιροπίρουνα</string>
    <string name="info3_string">Ισχυρό πλύσιμο: Κατάλληλο για πολύ λερωμένα πιάτα/ ποτήρια/ μαχαιροπίρουνα και για κατσαρόλες</string>
    <string name="final_message1_string">Το πλύσιμο ολοκληρώθηκε</string>
    <string name="final_message2_string">Μπορείτε να ανοίξετε το πλυντήριο</string>
<!--    <string name="button_abort_string"> Ακύρωση </string>-->
<!--    <string name="button_continue_now_string"> Πλύσιμο τώρα </string>-->
<!--    <string name="button_continue_later_string"> Ορισμός ώρας \nπλυσίματος </string>-->
    <string name="fase2_text1_string">Επιλέξατε Κανονικό πλύσιμο</string>
    <string name="fase3_text1_string">Απομένουν 25 λεπτά για την ολοκλήρωση του πλυσίματος</string>
</resources>
